--- a/HTML-PersonalSite/index.html
+++ b/HTML-PersonalSite/index.html
@@ -10,7 +10,7 @@
   <img src="Bitomoji_70.png" alt="Nima Profile Picture">
   <h1>Nima Motieifard</h1>
   <p><em>Software Developer</em></p>
-  <p>I am a second year CS student at york university, intrested in web development, ios development and cyber security engineering.</p>
+  <p>I am a second year CS student at York university, intrested in web development, ios development and cyber security engineering.</p>
   <hr>
   <h3>Education</h3>
   <ul>
@@ -21,12 +21,36 @@
 
   <ol>
     <h3>My Hobbies</h3>
-    <li>HackT he Box</li>
-    <li>Photography</li>
+    <li>Hack The Box</li>
+    <li><a href="https://www.instagram.com/photography_cafeee/">Photography</a></li>
     <li>Cisco certs</li>
-
-
   </ol>
+  <h3>Experience</h3>
+
+    <table>
+      <thea>
+        <th>Date</th>
+        <th>Work</th>
+      </thea>
+      <tbod>
+        <tr>
+          <td>2020</td>
+          <td>Real Time Massenger App(ios)</td>
+        </tr>
+        <tr>
+        <td>2021</td>
+        <td>Real Time Massenger App(ios)</td>
+        </tr>
+      </tbod>
+      <tfoot>
+
+      </tfoot>
+
+    </table>
+    <hr>
+
+
+
 </body>
 
 </html>
