--- a/HTML-PersonalSite/index.html
+++ b/HTML-PersonalSite/index.html
@@ -7,10 +7,19 @@
 </head>
 
 <body>
-  <img src="Bitomoji_70.png" alt="Nima Profile Picture">
-  <h1>Nima Motieifard</h1>
-  <p><em>Software Developer</em></p>
-  <p>I am a second year CS student at York university, intrested in web development, ios development and cyber security engineering.</p>
+  <table cellpadding="20">
+    <tr>
+      <td><img src="Bitomoji_70.png" alt="Nima Profile Picture"></td>
+      <td>
+        <h1>Nima Motieifard</h1>
+        <p><em>Software Developer</em></p>
+        <p>I am a second year CS student at York university, intrested in web development, ios development and cyber security engineering.</p>
+      </td>
+    </tr>
+
+  </table>
+
+
   <hr>
   <h3>Education</h3>
   <ul>
@@ -19,35 +28,84 @@
     <li>Brain Station boot camp</li>
   </ul>
 
+  <hr>
+  <h3>My Hobbies</h3>
   <ol>
-    <h3>My Hobbies</h3>
     <li>Hack The Box</li>
     <li><a href="https://www.instagram.com/photography_cafeee/">Photography</a></li>
     <li>Cisco certs</li>
   </ol>
+  <hr>
   <h3>Experience</h3>
 
-    <table>
-      <thea>
-        <th>Date</th>
-        <th>Work</th>
-      </thea>
-      <tbod>
-        <tr>
-          <td>2020</td>
-          <td>Real Time Massenger App(ios)</td>
-        </tr>
-        <tr>
+  <table>
+    <thea>
+      <th>Date</th>
+      <th>Work</th>
+    </thea>
+    <tbod>
+      <tr>
+        <td>2020</td>
+        <td>Real Time Massenger App(ios)</td>
+      </tr>
+      <tr>
         <td>2021</td>
         <td>Real Time Massenger App(ios)</td>
-        </tr>
-      </tbod>
-      <tfoot>
+      </tr>
+    </tbod>
+    <tfoot>
+    </tfoot>
 
-      </tfoot>
+  </table>
+  <hr>
 
-    </table>
-    <hr>
+  <h3>Skills</h3>
+
+
+  <table cellspacing = "10">
+    <tr>
+      <td>Swift</td>
+      <td>⭐⭐⭐</td>
+    </tr>
+    <tr>
+      <td>HTML</td>
+      <td>⭐⭐⭐⭐</td>
+    </tr>
+    <tr>
+      <td>CSS</td>
+      <td>⭐⭐⭐</td>
+    </tr>
+    <tr>
+      <td>Python</td>
+      <td>⭐⭐⭐⭐⭐</td>
+    </tr>
+    <tr>
+      <td>Django</td>
+      <td>⭐⭐⭐</td>
+    </tr>
+      <tr>
+        <td>Java</td>
+        <td>⭐⭐⭐</td>
+      </tr>
+      <tr>
+        <td>JS</td>
+        <td>⭐⭐</td>
+      </tr>
+  </table>
+
+<hr>
+<h4>Contact me</h4>
+<form  action="mailto:nima.motieifard@gmail.com" method="post" enctype="text/plain">
+  <label>Your Name:</label>
+  <input type="text" name="yourName" value=""><br>
+  <label>Your email:</label>
+  <input type="email" name="yourEmail" value=""><br>
+  <lable>Your message:</lable>
+  <textarea name="message" id="" cols="80" rows="5"></textarea><br>
+  <input type="submit" name="" id="">
+
+</form>
+
 
 
 
