--- a/HTML-PersonalSite/index.html
+++ b/HTML-PersonalSite/index.html
@@ -4,6 +4,15 @@
 <head>
   <meta charset="utf-8">
   <title>Nima's personal site</title>
+
+  <style>
+
+    body {
+      background-color: #EAF6F6;
+    }
+
+
+  </style>
 </head>
 
 <body>
