--- a/HTML-PersonalSite/index.html
+++ b/HTML-PersonalSite/index.html
@@ -4,15 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Nima's personal site</title>
-
-  <style>
-
-    body {
-      background-color: #EAF6F6;
-    }
-
-
-  </style>
+<link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
@@ -34,7 +26,7 @@
   <ul>
     <li>York university</li>
     <li>Burnaby Mountain Secondary School</li>
-    <li>Brain Station boot camp</li>
+    <li>Brain Station bootcamp</li>
   </ul>
 
   <hr>
