--- a/CSS-MySite/index.html
+++ b/CSS-MySite/index.html
@@ -5,13 +5,26 @@
   <meta charset="utf-8">
   <title>Nima Motieifard</title>
 <link rel="stylesheet" href="css/styles.css">
-<link rel="icon" href="favicon.png">
+<link rel="icon" href="images/favicon.png">
 </head>
 
 <body>
-  <div class="">
+  <div class="top-container">
+    <img src="images/cloud.png" alt="cloud-img">
     <h1>I'm Nima.</h1>
-    <p>a programmer.</p>
+    <p>a <span class="pro">pro</span>grammer.</p>
+    <img src="images/cloud.png" alt="cloud-img">
+    <img src="images/mountain.png" alt="mountain-img">
+
+
+  </div>
+
+  <div class="middle-container">
+
+  </div>
+
+  <div class="bottom-container">
+
 
   </div>
 </body>
