--- a/CSS-MySite/index.html
+++ b/CSS-MySite/index.html
@@ -31,16 +31,17 @@
     <div class="skills">
       <h2>My Skills.</h2>
       <div class="skill-row">
-        <img class="" src="" alt="">
+        <img class="code-img" src="images/terminal-window.png" alt="">
         <h3>Lorem & Ipsum</h3>
         <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
       </div>
       <div class="skill-row">
-        <img class="" src="" alt="">
+        <img class="chilli-img" src="images/coding.png" alt="">
         <h3>Lorem Ipsum Dolor</h3>
         <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
       </div>
     </div>
+    <br>
     <hr>
     <div class="contact-me">
       <h2>Get In Touch</h2>
