--- a/CSS-MySite/index.html
+++ b/CSS-MySite/index.html
@@ -23,9 +23,9 @@
 
   <div class="middle-container">
     <div class="profile">
-      <img src="images/favicon.png" alt="profile pic">
+      <img class="profile-pic" src="images/favicon.png" alt="profile pic">
       <h2>Hello.</h2>
-      <p>Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor, montes nulla distinctio.</p>
+      <p class="profile-description">Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor, montes nulla distinctio.</p>
     </div>
     <hr>
     <div class="skills">
