--- a/CSS-MySite/index.html
+++ b/CSS-MySite/index.html
@@ -47,7 +47,7 @@
       <h2>Get In Touch</h2>
       <h3>Lorem ipsum dolor sit amet, non elit.</h3>
       <p>Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
-      <a class="btn" href="nima.motieifard@gmail.com">CONTACT ME</a>
+      button<a class="btn" href="nima.motieifard@gmail.com">CONTACT ME</a>
     </div>
   </div>
 
@@ -56,7 +56,7 @@
     <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
     <a class="footer-link" href="https://twitter.com/">Twitter</a>
     <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
-    <p>© 2021 Nima Motieifard.</p>
+    <p class="credits">© 2021 Nima Motieifard.</p>
   </div>
 
 
