--- a/CSS-MySite/index.html
+++ b/CSS-MySite/index.html
@@ -47,7 +47,7 @@
       <h2>Get In Touch</h2>
       <h3>Lorem ipsum dolor sit amet, non elit.</h3>
       <p>Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
-      button<a class="btn" href="nima.motieifard@gmail.com">CONTACT ME</a>
+      <button class="btn"><a class="btn-a" href="mailto:nima.motieifard@gmail.com">CONTACT ME</a>
     </div>
   </div>
 
