--- a/TinDog-Start/index.html
+++ b/TinDog-Start/index.html
@@ -45,10 +45,13 @@
 
     <!-- Title -->
 
-    <div>
-      <h1>Meet new and interesting dogs nearby.</h1>
-      <button type="button">Download</button>
-      <button type="button">Download</button>
+    <div class="row">
+      <div>
+        <h1>Meet new and interesting dogs nearby.</h1>
+        <button type="button">Download</button>
+        <button type="button">Download</button>
+      </div>
+
     </div>
     <div>
       <img src="images/iphone6.png" alt="iphone-mockup">
