--- a/TinDog-Start/index.html
+++ b/TinDog-Start/index.html
@@ -46,16 +46,16 @@
     <!-- Title -->
 
     <div class="row">
-      <div>
+      <div class="col-lg-6">
         <h1>Meet new and interesting dogs nearby.</h1>
         <button type="button">Download</button>
         <button type="button">Download</button>
       </div>
 
-    </div>
-    <div>
+    <div class="col-lg-6">
       <img src="images/iphone6.png" alt="iphone-mockup">
     </div>
+      </div>
 
   </section>
 
