--- a/TinDog-Start/index.html
+++ b/TinDog-Start/index.html
@@ -56,13 +56,13 @@
 
       <div class="row">
         <div class="col-lg-6">
-          <h1>Meet new and interesting dogs nearby.</h1>
+          <h1 class="description">Connect with your highest self.</h1>
           <button type="button"  class="btn btn-dark btn-lg"><i class="fab fa-instagram"></i> Instagram</button>
           <button type="button" class="btn btn-outline-light btn-lg"><i class="fas fa-envelope-square"></i> Email</button>
         </div>
 
         <div class="col-lg-6">
-          <img src="images/iphone6.png" alt="iphone-mockup">
+          <img class= "universe" src="images/Universe.png" alt="iphone-mockup">
         </div>
       </div>
     </div>
