--- a/TinDog-Start/index.html
+++ b/TinDog-Start/index.html
@@ -57,12 +57,12 @@
       <div class="row">
         <div class="col-lg-6">
           <h1 class="description">Connect with your highest self.</h1>
-          <button type="button"  class="btn btn-dark btn-lg"><i class="fab fa-instagram"></i> Instagram</button>
+          <button type="button"  class="btn btn-dark btn-lg nav-button"><i class="fab fa-instagram"></i> Instagram</button>
           <button type="button" class="btn btn-outline-light btn-lg"><i class="fas fa-envelope-square"></i> Email</button>
         </div>
 
         <div class="col-lg-6">
-          <img class= "universe" src="images/Universe.png" alt="iphone-mockup">
+          <img class="title-imgage" src="images/Universe.png" alt="iphone-mockup">
         </div>
       </div>
     </div>
