--- a/TinDog-Start/index.html
+++ b/TinDog-Start/index.html
@@ -62,7 +62,7 @@
         </div>
 
         <div class="col-lg-6">
-          <img class="title-imgage" src="images/Universe.png" alt="iphone-mockup">
+          <img class="title-imgage" src="images/dear.jpg" alt="iphone-mockup">
         </div>
       </div>
     </div>
