--- a/TinDog-Start/index.html
+++ b/TinDog-Start/index.html
@@ -72,14 +72,16 @@
   <!-- Features -->
 
   <section id="features">
-
-    <h3>Easy to use.</h3>
+    <i class="fas fa-check-circle features_icon"></i>
+    <h3 class="features_h3">Easy to use.</h3>
     <p>So easy to use, even your dog could do it.</p>
 
-    <h3>Elite Clientele</h3>
+    <i class="fas fa-bullseye features_icon"></i>
+    <h3 class="features_h3">Elite Clientele</h3>
     <p>We have all the dogs, the greatest dogs.</p>
 
-    <h3>Guaranteed to work.</h3>
+    <i class="fas fa-heart features_icon"></i>
+    <h3 class="features_h3">Guaranteed to work.</h3>
     <p>Find the love of your dog's life or your money back.</p>
 
   </section>
