--- a/TinDog-Start/index.html
+++ b/TinDog-Start/index.html
@@ -72,18 +72,24 @@
   <!-- Features -->
 
   <section id="features">
-    <i class="fas fa-check-circle features_icon"></i>
-    <h3 class="features_h3">Easy to use.</h3>
-    <p>So easy to use, even your dog could do it.</p>
 
-    <i class="fas fa-bullseye features_icon"></i>
-    <h3 class="features_h3">Elite Clientele</h3>
-    <p>We have all the dogs, the greatest dogs.</p>
+    <div class="feature-box">
+      <i class="fas fa-check-circle features_icon"></i>
+      <h3 class="features_h3">Easy to use.</h3>
+      <p>So easy to use, even your dog could do it.</p>
+  </div>
 
+    <div class="feature-box">
+      <i class="fas fa-bullseye features_icon"></i>
+      <h3 class="features_h3">Elite Clientele</h3>
+      <p>We have all the dogs, the greatest dogs.</p>
+  </div>
+
+  <div class="feature-box">
     <i class="fas fa-heart features_icon"></i>
     <h3 class="features_h3">Guaranteed to work.</h3>
     <p>Find the love of your dog's life or your money back.</p>
-
+  </div>
   </section>
 
 
