--- a/TinDog-Start/index.html
+++ b/TinDog-Start/index.html
@@ -73,23 +73,27 @@
 
   <section id="features">
 
-    <div class="feature-box">
+    <div class="row">
+    <div class="feature-box col-lg-4">
       <i class="fas fa-check-circle features_icon"></i>
       <h3 class="features_h3">Easy to use.</h3>
       <p>So easy to use, even your dog could do it.</p>
   </div>
 
-    <div class="feature-box">
+    <div class="feature-box col-lg-4">
       <i class="fas fa-bullseye features_icon"></i>
       <h3 class="features_h3">Elite Clientele</h3>
       <p>We have all the dogs, the greatest dogs.</p>
   </div>
 
-  <div class="feature-box">
+  <div class="feature-box col-lg-4">
     <i class="fas fa-heart features_icon"></i>
     <h3 class="features_h3">Guaranteed to work.</h3>
     <p>Find the love of your dog's life or your money back.</p>
   </div>
+  </div>
+
+
   </section>
 
 
