--- a/TinDog-Start/index.html
+++ b/TinDog-Start/index.html
@@ -57,7 +57,7 @@
       <div class="row">
         <div class="col-lg-6">
           <h1 class="description">Connect with your highest self.</h1>
-          <button type="button"  class="btn btn-dark btn-lg nav-button"><i class="fab fa-instagram"></i> Instagram</button>
+          <button type="button" class="btn btn-dark btn-lg nav-button"><i class="fab fa-instagram"></i> Instagram</button>
           <button type="button" class="btn btn-outline-light btn-lg"><i class="fas fa-envelope-square"></i> Email</button>
         </div>
 
@@ -74,24 +74,24 @@
   <section id="features">
 
     <div class="row">
-    <div class="feature-box col-lg-4">
-      <i class="fas fa-check-circle fa-4x features_icon"></i>
-      <h3 class="features_h3">Easy to use.</h3>
-      <p>So easy to use, even your dog could do it.</p>
-  </div>
+      <div class="feature-box col-lg-4">
+        <i class="fas fa-check-circle fa-4x features_icon"></i>
+        <h3 class="features_h3">Easy to use.</h3>
+        <p>So easy to use, even your dog could do it.</p>
+      </div>
 
-    <div class="feature-box col-lg-4">
-      <i class="fas fa-bullseye fa-4x features_icon"></i>
-      <h3 class="features_h3">Elite Clientele</h3>
-      <p>We have all the dogs, the greatest dogs.</p>
-  </div>
+      <div class="feature-box col-lg-4">
+        <i class="fas fa-bullseye fa-4x features_icon"></i>
+        <h3 class="features_h3">Elite Clientele</h3>
+        <p>We have all the dogs, the greatest dogs.</p>
+      </div>
 
-  <div class="feature-box col-lg-4">
-    <i class="fas fa-heart fa-4x features_icon"></i>
-    <h3 class="features_h3">Guaranteed to work.</h3>
-    <p>Find the love of your dog's life or your money back.</p>
-  </div>
-  </div>
+      <div class="feature-box col-lg-4">
+        <i class="fas fa-heart fa-4x features_icon"></i>
+        <h3 class="features_h3">Guaranteed to work.</h3>
+        <p>Find the love of your dog's life or your money back.</p>
+      </div>
+    </div>
 
 
   </section>
@@ -109,8 +109,8 @@
         </div>
         <div class="carousel-item">
           <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
-            <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
-            <em>Beverly, Illinois</em>
+          <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
+          <em>Beverly, Illinois</em>
         </div>
       </div>
       <a class="carousel-control-prev" href="#testimonials-carousel" role="button" data-slide="prev">
@@ -121,7 +121,7 @@
         <span class="carousel-control-next-icon"></span>
         <span class="sr-only">Next</span>
       </a>
-      
+
     </div>
 
   </section>
@@ -146,30 +146,51 @@
     <p>Simple and affordable price plans for your and your dog.</p>
 
 
-    <h3>Chihuahua</h3>
-    <h2>Free</h2>
-    <p>5 Matches Per Day</p>
-    <p>10 Messages Per Day</p>
-    <p>Unlimited App Usage</p>
-    <button type="button">Sign Up</button>
+<div class="card-group">
+    <div class="card">
+      <div class="card-header">
+        <h3>Chihuahua</h3>
+      </div>
+      <div class="card-body">
+        <h2>Free</h2>
+        <p>5 Matches Per Day</p>
+        <p>10 Messages Per Day</p>
+        <p>Unlimited App Usage</p>
+        <button type="button">Sign Up</button>
+      </div>
+    </div>
 
+    <div class="card">
+      <div class="card-header">
+        <h3>Labrador</h3>
+      </div>
+      <div class="card-body">
+        <h2>$49 / mo</h2>
+        <p>Unlimited Matches</p>
+        <p>Unlimited Messages</p>
+        <p>Unlimited App Usage</p>
+        <button type="button">Sign Up</button>
 
-    <h3>Labrador</h3>
-    <h2>$49 / mo</h2>
-    <p>Unlimited Matches</p>
-    <p>Unlimited Messages</p>
-    <p>Unlimited App Usage</p>
-    <button type="button">Sign Up</button>
+      </div>
+    </div>
 
+    <div class="card">
+      <h3>Mastiff</h3>
+      <div class="card-header">
 
-    <h3>Mastiff</h3>
-    <h2>$99 / mo</h2>
-    <p>Pirority Listing</p>
-    <p>Unlimited Matches</p>
-    <p>Unlimited Messages</p>
-    <p>Unlimited App Usage</p>
-    <button type="button">Sign Up</button>
+      </div>
+      <div class="card-body">
 
+        <h2>$99 / mo</h2>
+        <p>Pirority Listing</p>
+        <p>Unlimited Matches</p>
+        <p>Unlimited Messages</p>
+        <p>Unlimited App Usage</p>
+        <button type="button">Sign Up</button>
+
+      </div>
+    </div>
+</div>
   </section>
 
 
