--- a/TinDog-Start/index.html
+++ b/TinDog-Start/index.html
@@ -146,7 +146,9 @@
     <p>Simple and affordable price plans for your and your dog.</p>
 
 
-<div class="card-group">
+<div class="row">
+
+  <div class="col-lg-4 col-md-6">
     <div class="card">
       <div class="card-header">
         <h3>Chihuahua</h3>
@@ -159,7 +161,9 @@
         <button type="button">Sign Up</button>
       </div>
     </div>
+    </div>
 
+  <div class="col-lg-4 col-md-6">
     <div class="card">
       <div class="card-header">
         <h3>Labrador</h3>
@@ -173,7 +177,10 @@
 
       </div>
     </div>
+  </div>
 
+
+  <div class="col-lg-4">
     <div class="card">
       <h3>Mastiff</h3>
       <div class="card-header">
@@ -190,6 +197,7 @@
 
       </div>
     </div>
+</div>
 </div>
   </section>
 
