--- a/TinDog-Start/index.html
+++ b/TinDog-Start/index.html
@@ -158,7 +158,7 @@
         <p>5 Matches Per Day</p>
         <p>10 Messages Per Day</p>
         <p>Unlimited App Usage</p>
-        <button class="btn btn-lg btn-block btn-outline-dark" type="button">Sign Up</button>
+        <button class="btn btn-lg btn-block btn-outline-dark col-12" type="button">Sign Up</button>
       </div>
     </div>
     </div>
@@ -173,7 +173,7 @@
         <p>Unlimited Matches</p>
         <p>Unlimited Messages</p>
         <p>Unlimited App Usage</p>
-        <button class="btn btn-lg btn-block btn-dark" type="button">Sign Up</button>
+        <button class="btn btn-lg btn-block btn-dark col-12" type="button">Sign Up</button>
 
       </div>
     </div>
@@ -193,7 +193,7 @@
         <p>Unlimited Matches</p>
         <p>Unlimited Messages</p>
         <p>Unlimited App Usage</p>
-        <button class="btn btn-lg btn-block btn-dark" type="button">Sign Up</button>
+        <button class="btn btn-lg btn-block btn-dark col-12" type="button">Sign Up</button>
 
       </div>
     </div>
