--- a/TinDog-Start/index.html
+++ b/TinDog-Start/index.html
@@ -148,7 +148,7 @@
 
 <div class="row">
 
-  <div class="col-lg-4 col-md-6">
+  <div class="pricing-column col-lg-4 col-md-6">
     <div class="card">
       <div class="card-header">
         <h3>Chihuahua</h3>
@@ -163,7 +163,7 @@
     </div>
     </div>
 
-  <div class="col-lg-4 col-md-6">
+  <div class="pricing-column col-lg-4 col-md-6">
     <div class="card">
       <div class="card-header">
         <h3>Labrador</h3>
@@ -180,7 +180,7 @@
   </div>
 
 
-  <div class="col-lg-4">
+  <div class="pricing-column col-lg-4">
     <div class="card">
       <h3>Mastiff</h3>
       <div class="card-header">
