--- a/TinDog-Start/index.html
+++ b/TinDog-Start/index.html
@@ -208,8 +208,8 @@
   <section id="cta">
 
     <h3>Find the True Love of Your Dog's Life Today.</h3>
-    <button type="button">Download</button>
-    <button type="button">Download</button>
+    <button type="button" class="cta-btn btn btn-dark btn-lg nav-button"><i class="fab fa-instagram"></i> Instagram</button>
+    <button type="button"class="cta-btn btn btn-outline-light btn-lg"><i class="fas fa-envelope-square"></i> Email</button>
 
   </section>
 
