--- a/TinDog-Start/index.html
+++ b/TinDog-Start/index.html
@@ -63,7 +63,7 @@
         </div>
 
         <div class="col-lg-6">
-          <img class="title-imgage" src="images/dear.jpg" alt="iphone-mockup">
+          <img class="title-imgage" src="images/iphone6.png" alt="iphone-mockup">
         </div>
       </div>
     </div>
@@ -218,7 +218,7 @@
 
   <footer id="footer">
 
-    <p>© Copyright 2018 TinDog</p>
+    <p>© Copyright 2021 PinkSalt</p>
 
   </footer>
 
