--- a/TinDog-Start/index.html
+++ b/TinDog-Start/index.html
@@ -63,7 +63,7 @@
         </div>
 
         <div class="col-lg-6">
-          <img class="title-imgage" src="images/Danica.PNG" alt="iphone-mockup">
+          <img class="title-imgage" src="images/Danica_74.png" alt="iphone-mockup">
         </div>
       </div>
     </div>
