--- a/TinDog-Start/index.html
+++ b/TinDog-Start/index.html
@@ -62,7 +62,7 @@
           <button type="button" class="btn btn-outline-light btn-lg"><i class="fas fa-envelope-square"></i> Email</button>
         </div>
 
-        <div class="col-lg-6">
+        <div class="col-lg-6 ttgg">
           <img class="title-imgage" src="images/Danica_74.png" alt="iphone-mockup">
         </div>
       </div>
@@ -207,7 +207,7 @@
 
   <section id="cta">
 
-    <h3>Find the True Love of Your Dog's Life Today.</h3>
+    <h3 class="cta-heading">Find the True Love of Your Dog's Life Today.</h3>
     <button type="button" class="cta-btn btn btn-dark btn-lg nav-button"><i class="fab fa-instagram"></i> Instagram</button>
     <button type="button"class="cta-btn btn btn-outline-light btn-lg"><i class="fas fa-envelope-square"></i> Email</button>
 
