--- a/TinDog-Start/index.html
+++ b/TinDog-Start/index.html
@@ -57,7 +57,7 @@
 
       <div class="row">
         <div class="col-lg-6">
-          <h1 class="description">Connect with your highest self.</h1>
+          <h1 class="description big-heading">Connect with your highest self.</h1>
           <button type="button" class="btn btn-dark btn-lg nav-button"><i class="fab fa-instagram"></i> Instagram</button>
           <button type="button" class="btn btn-outline-light btn-lg"><i class="fas fa-envelope-square"></i> Email</button>
         </div>
