--- a/TinDog-Start/index.html
+++ b/TinDog-Start/index.html
@@ -104,7 +104,7 @@
     <div id="testimonials-carousel" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <h2>I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
+          <h2 class="testimonial-text">I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
           <img class="testimonial-image" src="images/dog-img.jpg" alt="dog-profile">
           <em>Pebbles, New York</em>
         </div>
@@ -143,7 +143,7 @@
 
   <section id="pricing">
 
-    <h2>A Plan for Every Dog's Needs</h2>
+    <h2 class="section-heading">A Plan for Every Dog's Needs</h2>
     <p>Simple and affordable price plans for your and your dog.</p>
 
 
@@ -155,7 +155,7 @@
         <h3>Chihuahua</h3>
       </div>
       <div class="card-body">
-        <h2>Free</h2>
+        <h2 class="price-text">Free</h2>
         <p>5 Matches Per Day</p>
         <p>10 Messages Per Day</p>
         <p>Unlimited App Usage</p>
@@ -170,7 +170,7 @@
         <h3>Labrador</h3>
       </div>
       <div class="card-body">
-        <h2>$49 / mo</h2>
+        <h2 class="price-text">$49 / mo</h2>
         <p>Unlimited Matches</p>
         <p>Unlimited Messages</p>
         <p>Unlimited App Usage</p>
@@ -189,7 +189,7 @@
       </div>
       <div class="card-body">
 
-        <h2>$99 / mo</h2>
+        <h2 class="price-text">$99 / mo</h2>
         <p>Pirority Listing</p>
         <p>Unlimited Matches</p>
         <p>Unlimited Messages</p>
