added the audio feature for the spanish website

--- a/spanish/index.html
+++ b/spanish/index.html
@@ -3,10 +3,32 @@
   <head>
     <meta charset="utf-8">
     <title>Spanish</title>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
+    <center>
+
+    <figure>
+        <figcaption>Angelito</figcaption>
+        <audio
+            controls
+            src="Recycled J, Aleesha - Angelito.mp3">
+                Your browser does not support the
+                <code>audio</code> element.
+        </audio>
+    </figure>
+
+    <div class="letra">
+      <p>Me querías cuidar, me porté tan mal\nTe perdí al final\n¿Y ahora dónde estás?\nMi ángel de la guarda\nPor eso no me gusta que me juren nada\nSi me pagaran por llorar sería millonaria\nPensé que duraría por siempre nuestra historia\nAhora que no te tengo, I gotta find another\nCada noche, tú me diste lo mejor\nY yo no lo vi hasta que un día se marchó\nYa busqué en otra piel tu calor\nNada que ver con lo que teníamos tú y yo\nY ahora cuando salgo a bailar\nAh ah ah ah\nYo veo tu cara en las demás\nAh ah ah ah\nMami te respondo, desde lo más hondo\nYa he tocado fondo, ayer en tu hombro\nAngelito que me tiene loco\nAyer todito y ahora ni te toco, ha (no, no)\nLlevo par de horas tirado el piso\nDe mi lado se marchó y no me avisó\nNi recuerdo lo último que me dijo\nPero sé que se marchó\nCada noche, tú me diste lo mejor\nY yo no lo vi hasta que un día se marchó\nYa busqué en otra piel tu calor\nNada que ver con lo que teníamos tú y yo\nY ahora cuando salgo a bailar\nAh ah ah ah\nYo veo tu cara en las demás\nAh ah ah ah\nY ahora que estoy roto, ahora que estoy rico\nDime dónde estás tú, mi dulce angelito\nY ahora que estoy roto, que te necesito\nMami, dame un poco, me tienes loquito\nLlevo par de horas tirada el piso\nDe mi lado se marchó y no me avisó\nNi recuerdo lo último que me dijo\nPero sé que fue un adiós y\nCada noche, tú me diste lo mejor\nY yo no lo vi hasta que un día se marchó\nYa busqué en otra piel tu calor\nNada que ver con lo que teníamos tú y yo\nY ahora cuando salgo a bailar\nAh ah ah ah\nYo veo tu cara en las demás\nAh ah ah ah\nY ahora cuando salgo a bailar\nAh ah ah ah\nYo veo tu cara en las demás\nAh ah ah ah</p>
+
+    </div>
 
 
+  </center>
+
+    <footer></footer>
 
 <script src="index.js" charset="utf-8"></script>
   </body>
