box 4 done (Spanish/Angelito)

--- a/spanish/angelito/index.html
+++ b/spanish/angelito/index.html
@@ -26,11 +26,12 @@
         Me querías <input type="text" size="4" class="box1" value=""> <span class="cuidar ans" > </span>,
          me porté tan mal<br>Te perdí al final<br>¿Y ahora dónde estás?<br>Mi ángel de la
           <input type="text" size="4" class="box2" value=""> <span class="guarda ans"> </span><br>
-          Por eso no me gusta que me juren nada<br>Si me pagaran por llorar sería millonaria<br>
+          Por eso no me gusta que me juren nada<br>
+          Si me pagaran por <input type="text" size="4" class="box3" value=""> <span class="llorar ans"> </span> sería millonaria<br>
           Pensé que duraría por siempre nuestra historia<br>
           Ahora que no te tengo, I gotta find another<br>
           Cada noche, tú me diste lo mejor<br>
-          Y yo no lo vi hasta que un día se marchó<br>
+          Y yo no lo vi hasta que un día se <input type="text" size="4" class="box4" value=""> <span class="marchó ans"> </span> <br>
           Ya busqué en otra piel tu calor<br>
           Nada que ver con lo que teníamos tú y yo<br>
           Y ahora cuando salgo a bailar<br>
