box seven done (Webdevelopment/Spanish/Angelito)

--- a/spanish/angelito/index.html
+++ b/spanish/angelito/index.html
@@ -38,12 +38,12 @@
           Ah ah ah ah<br>
           Yo veo tu cara en las demás<br>
           Ah ah ah ah<br>
-          Mami te respondo, desde lo más hondo<br>
+          Mami te respondo, desde lo más <input type="text" size="4" class="box5" value=""> <span class="hondo ans"> </span> <br>
           Ya he tocado fondo, ayer en tu hombro<br>
           Angelito que me tiene loco<br>
           Ayer todito y ahora ni te toco, ha (no, no)<br>
           Llevo par de horas tirado el piso<br>
-          De mi lado se marchó y no me avisó<br>
+          De mi lado se marchó y no me <input type="text" size="4" class="box6" value=""> <span class="avisó ans"> </span> <br>
           Ni recuerdo lo último que me dijo<br>
           Pero sé que se marchó<br>
           Cada noche, tú me diste lo mejor<br>
@@ -52,7 +52,7 @@
           Nada que ver con lo que teníamos tú y yo<br>
           Y ahora cuando salgo a bailar<br>
           Ah ah ah ah<br>Yo veo tu cara en las demás<br>
-          Ah ah ah ah<br>Y ahora que estoy roto, ahora que estoy rico<br>
+          Ah ah ah ah<br>Y ahora que estoy <input type="text" size="4" class="box7" value=""> <span class="roto ans"> </span> roto, ahora que estoy rico<br>
           Dime dónde estás tú, mi dulce angelito<br>
           Y ahora que estoy roto, que te necesito<br>
           Mami, dame un poco, me tienes loquito<br>
