--- a/spanish/angelito/index.html
+++ b/spanish/angelito/index.html
@@ -52,7 +52,7 @@
           Nada que ver con lo que teníamos tú y yo<br>
           Y ahora cuando salgo a bailar<br>
           Ah ah ah ah<br>Yo veo tu cara en las demás<br>
-          Ah ah ah ah<br>Y ahora que estoy <input type="text" size="4" class="box7" value=""> <span class="roto ans"> </span> roto, ahora que estoy rico<br>
+          Ah ah ah ah<br>Y ahora que estoy <input type="text" size="4" class="box7" value=""> <span class="roto ans"> </span>, ahora que estoy rico<br>
           Dime dónde estás tú, mi dulce angelito<br>
           Y ahora que estoy roto, que te necesito<br>
           Mami, dame un poco, me tienes loquito<br>
