Landing page done

--- a/spanish/angelito/index.html
+++ b/spanish/angelito/index.html
@@ -56,7 +56,7 @@
           Dime dónde estás tú, mi dulce angelito<br>
           Y ahora que estoy roto, que te necesito<br>
           Mami, dame un poco, me tienes loquito<br>
-          Llevo par de horas tirada el piso<br>
+          Llevo par de horas <input type="text" size="4" class="box8" value=""> <span class="tirada ans"> </span>tirada el piso<br>
           De mi lado se marchó y no me avisó<br>
           Ni recuerdo lo último que me dijo<br>
           Pero sé que fue un adiós y<br>
@@ -72,6 +72,18 @@
       <button class="button" type="button" name="button">Check answer</button>
     </div>
 
+    <div class="newWords">
+      <h1>Palabras Nuevas:</h1>
+      <h5>cuidar</h5>
+      <h5>guarda</h5>
+      <h5>llorar</h5>
+      <h5>marchó</h5>
+      <h5>hondo</h5>
+      <h5>avisó</h5>
+      <h5>roto</h5>
+      <h5>tirada</h5>
+
+    </div>
 
   </center>
 
