minor changes on Spanish

--- a/spanish/angelito/index.html
+++ b/spanish/angelito/index.html
@@ -11,7 +11,7 @@
     <center>
 
     <figure>
-        <figcaption>Angelito</figcaption>
+        <figcaption><h2>Angelito by Recycled J, Aleesha</h2></figcaption>
         <audio
             controls
             src="Recycled J, Aleesha - Angelito.mp3">
@@ -71,9 +71,9 @@
       </p>
       <button class="button" type="button" name="button">Check answer</button>
     </div>
-
+  </center>
     <div class="newWords">
-      <h1>Palabras Nuevas:</h1>
+      <center><h1>Palabras Nuevas:</h1></center>
       <h5>cuidar</h5>
       <h5>guarda</h5>
       <h5>llorar</h5>
@@ -85,9 +85,11 @@
 
     </div>
 
-  </center>
+    <footer id="footer">
 
-    <footer></footer>
+      <p>© Copyright 2021 Spañol</p>
+
+    </footer>
 
 <script src="index.js" charset="utf-8"></script>
   </body>
