--- a/spanish/landingPage/index.html
+++ b/spanish/landingPage/index.html
@@ -74,8 +74,9 @@
   <!-- Features -->
 
   <div class="letra">
-  <section id="features">
 
+  <section id="features">
+    <center><h2>Letras</h2></center>
     <div class="row">
       <div class="feature-box col-lg-4">
         <i class="fas fa-check-circle fa-4x fas fa-compact-disc pink"></i>
