--- a/spanish/index.html
+++ b/spanish/index.html
@@ -1,9 +1,10 @@
+
 <!DOCTYPE html>
 <html>
 
 <head>
   <meta charset="utf-8">
-  <title>PinkSalt</title>
+  <title>Spañol</title>
 
   <!--  Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&family=Ubuntu:wght@300&display=swap" rel="stylesheet">
@@ -34,20 +35,20 @@
       <!-- Nav Bar -->
 
       <nav class="navbar navbar-expand-lg navbar-dark">
-        <a class="navbar-brand" href="">PinkSalt</a>
+        <a class="navbar-brand" href=""></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link" href="">Contact</a>
+              <a class="nav-link" href="angelito/index.html">letras</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="">Pricing</a>
+              <a class="nav-link" href="">vocabulario</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="">Download</a>
+              <a class="nav-link" href="">Grammer</a>
             </li>
           </ul>
         </div>
@@ -57,13 +58,13 @@
 
       <div class="row">
         <div class="col-lg-6">
-          <h1 class="description big-heading">Connect with your highest self.</h1>
-          <button type="button" class="btn btn-dark btn-lg nav-button"><i class="fab fa-instagram"></i> Instagram</button>
-          <button type="button" class="btn btn-outline-light btn-lg"><i class="fas fa-envelope-square"></i> Email</button>
+          <h1 class="description big-heading"> Aprender Spañol con Nima.</h1>
+          <a href="angelito/index.html"><button type="button" class="btn btn-dark btn-lg nav-button"><i class="far fa-clipboard"></i> Angelito</button></a>
+          <button type="button" class="btn btn-outline-light btn-lg"><i class="far fa-bookmark"></i> vocabulario</button>
         </div>
 
         <div class="col-lg-6 ttgg">
-          <img class="title-imgage" src="images/Danica_74.png" alt="iphone-mockup">
+          <img class="title-imgage" src="stand.png" alt="bitomoji">
         </div>
       </div>
     </div>
@@ -72,35 +73,38 @@
 
   <!-- Features -->
 
-  <section id="features">
+  <div class="letra">
 
+  <section id="features">
+    <center><h2>Letras</h2></center>
     <div class="row">
       <div class="feature-box col-lg-4">
-        <i class="fas fa-check-circle fa-4x features_icon"></i>
-        <h3 class="feature-title">Easy to use.</h3>
-        <p>So easy to use, even your dog could do it.</p>
+        <i class="fas fa-check-circle fa-4x fas fa-compact-disc pink"></i>
+
+        <h3 class="feature-title"><a href="angelito/index.html">angelito</a>.</h3>
+        <p>Recycled J</p>
       </div>
 
       <div class="feature-box col-lg-4">
-        <i class="fas fa-bullseye fa-4x features_icon"></i>
-        <h3 class="feature-title">Elite Clientele</h3>
-        <p>We have all the dogs, the greatest dogs.</p>
+        <i class="fas fa-check-circle fa-4x fas fa-compact-disc pink"></i>
+        <h3 class="feature-title">Otra Noche Sin Ti</h3>
+        <p>J Balvin & Khalid.</p>
       </div>
 
       <div class="feature-box col-lg-4">
-        <i class="fas fa-heart fa-4x features_icon"></i>
-        <h3 class="feature-title">Guaranteed to work.</h3>
-        <p>Find the love of your dog's life or your money back.</p>
+        <i class="fas fa-check-circle fa-4x fas fa-compact-disc pink"></i>
+        <h3 class="feature-title">La Última Vez</h3>
+        <p>Octo</p>
       </div>
     </div>
 
 
   </section>
-
+</div>
 
   <!-- Testimonials -->
 
-  <section id="testimonials">
+  <!-- <section id="testimonials">
     <div id="testimonials-carousel" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
@@ -125,23 +129,23 @@
 
     </div>
 
-  </section>
+  </section> -->
 
 
   <!-- Press -->
-
+<!--
   <section id="press">
     <img class="pres-logo" src="images/techcrunch.png" alt="tc-logo">
     <img class="pres-logo" src="images/tnw.png" alt="tnw-logo">
     <img class="pres-logo" src="images/bizinsider.png" alt="biz-insider-logo">
     <img class="pres-logo" src="images/mashable.png" alt="mashable-logo">
 
-  </section>
+  </section> -->
 
 
   <!-- Pricing -->
 
-  <section id="pricing">
+  <!-- <section id="pricing">
 
     <h2 class="section-heading">A Plan for Every Dog's Needs</h2>
     <p>Simple and affordable price plans for your and your dog.</p>
@@ -200,25 +204,25 @@
     </div>
 </div>
 </div>
-  </section>
+  </section> -->
 
 
   <!-- Call to Action -->
 
-  <section id="cta">
+  <!-- <section id="cta">
 
     <h3 class="cta-heading">Find the True Love of Your Dog's Life Today.</h3>
     <button type="button" class="btn btn-dark btn-lg nav-button"><i class="fab fa-instagram"></i> Instagram</button>
     <button type="button"class="btn btn-outline-light btn-lg"><i class="fas fa-envelope-square"></i> Email</button>
 
-  </section>
+  </section> -->
 
 
   <!-- Footer -->
 
   <footer id="footer">
 
-    <p>© Copyright 2021 PinkSalt</p>
+    <p>© Copyright 2021 Spañol</p>
 
   </footer>
 
