--- a/spanish/angelito/index.html
+++ b/spanish/angelito/index.html
@@ -84,6 +84,7 @@
       <h5>tirada</h5>
 
     </div>
+    <a href="../index.html"><button type="button" name="button">Go Back</button></a>
 
     <footer id="footer">
 
