modified index.html, styles.css, added Bitomoji-70 ( SPanish)

--- a/spanish/index.html
+++ b/spanish/index.html
@@ -4,7 +4,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Español</title>
+
 
   <!--  Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&family=Ubuntu:wght@300&display=swap" rel="stylesheet">
@@ -24,6 +24,11 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
   <link rel="preconnect" href="https://fonts.gstatic.com">
+
+
+  <!-- <link rel="icon" type="image/png" href="{% static "portfolio/Bitomoji_70 copy.png" %}"> -->
+  <title>Español</title>
+  <link rel="icon" type="image/png" href="Bitomoji_70.png">
 </head>
 
 <body>
@@ -220,13 +225,14 @@
 
   <!-- Footer -->
 
-  <footer id="footer">
-
-    <p>© Copyright 2021 Español</p>
-
-  </footer>
-
-
+ <div class="footer">
+   <footer class="text-center text-lg-start bg-light text-muted">
+    <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
+     © 2021 Copyright:
+     <a class="text-reset fw-bold" href="http://nimamot.pythonanywhere.com">nimamot.com</a>
+   </div>
+   </footer>
+   </div>
 </body>
 
 </html>
