minor changes on Spanish/otraNocheSinTi

--- a/spanish/index.html
+++ b/spanish/index.html
@@ -86,13 +86,13 @@
       <div class="feature-box col-lg-4">
         <i class="fas fa-check-circle fa-4x fas fa-compact-disc pink"></i>
 
-        <h3 class="feature-title"><a href="angelito/index.html">angelito</a>.</h3>
+        <h3 class="feature-title"><a href="angelito/index.html">angelito</a></h3>
         <p>Recycled J</p>
       </div>
 
       <div class="feature-box col-lg-4">
         <i class="fas fa-check-circle fa-4x fas fa-compact-disc pink"></i>
-        <h3 class="feature-title">Otra Noche Sin Ti</h3>
+        <h3 class="feature-title"><a href="otraNocheSinTi/index.html">Otra Noche Sin Ti</a></h3>
         <p>J Balvin & Khalid.</p>
       </div>
 
